<resources>
    <string name="app_name">Activities18November</string>
    <string name="second_activity">I\'m Second Activity</string>
    <string name="go_to_second">Go to the second</string>
    <string name="place_to_right">Enter something here</string>
    <string name="count_increase">Count Increase</string>

    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_mult">*</string>
    <string name="key_div">/</string>
    <string name="change_theme">Change Theme</string>
    <string name="toast_fired">Toast Fired!!</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="theme_four">Four</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="open_browser">Open Browser</string>

</resources>