<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/go_to_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_second" />

        <EditText
            android:id="@+id/place_to_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_to_right" />

        <TextView
            android:id="@+id/count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp" />

        <Button
            android:id="@+id/count_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_increase" />

        <TextView
            android:id="@+id/count_value_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp" />

        <Button
            android:id="@+id/count_increase_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_increase" />

        <TextView
            android:id="@+id/count_value_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp" />

        <Button
            android:id="@+id/count_increase_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_increase" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>